--- a/jros2services.tests/build.gradle
+++ b/jros2services.tests/build.gradle
@@ -2,6 +2,13 @@ plugins {
     id 'com.diffplug.spotless'
 }
 
+eclipse.classpath.file {
+    // instruct eclipse plugin to put everything to module path
+    whenMerged {
+        entries.findAll { it.kind == 'lib' }.each { it.entryAttributes['module'] = 'true' }
+    }
+}
+
 dependencies {
     testImplementation project(':jros2services')
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
@@ -20,6 +27,9 @@ sourceSets {
 
 test {
     useJUnitPlatform()
+    testLogging {
+        events "started", "failed"
+    }
 }
 
 // run spotless and format code before the build
