--- a/jros2services/build.gradle
+++ b/jros2services/build.gradle
@@ -12,13 +12,22 @@ plugins {
     id 'com.diffplug.spotless'
 }
 
+apply plugin : 'eclipse'
+
+eclipse.classpath.file {
+    // instruct eclipse plugin to put everything to module path
+    whenMerged {
+        entries.findAll { it.kind == 'lib' }.each { it.entryAttributes['module'] = 'true' }
+    }
+}
+
 dependencies {
-    implementation 'io.github.lambdaprime:jros2messages:1.0-SNAPSHOT'
-    implementation 'io.github.lambdaprime:jros2client:1.0-SNAPSHOT'
+    implementation 'io.github.lambdaprime:jros2messages:1.0'
+    implementation 'io.github.lambdaprime:jros2client:1.0'
 
     // transitively export following dependency to tests project
-    apiElements 'io.github.lambdaprime:jros2messages:1.0-SNAPSHOT'
-    apiElements 'io.github.lambdaprime:jros2client:1.0-SNAPSHOT'
+    apiElements 'io.github.lambdaprime:jros2messages:1.0'
+    apiElements 'io.github.lambdaprime:jros2client:1.0'
 }
 
 jar { 
@@ -28,13 +37,14 @@ jar {
 }
 
 javadoc {
-    options.noTimestamp = true;
-    options.noQualifiers = ["all"];
-    options.noTree = true;
-    options.noIndex = true;
-    options.noNavBar = true;
+    options.noTimestamp = true
+    options.noQualifiers = ["all"]
+    options.noTree = true
+    options.noIndex = true
+    options.noNavBar = true
     // ignore missing @return, @param etc
     options.addBooleanOption('Xdoclint:all,-missing', true)
+    exclude 'pinorobotics/ddsrpc/**'
 }
 
 def packageDir = "$buildDir/package/${projectName}"
@@ -112,7 +122,7 @@ if (project.hasProperty('publish')) {
         from components.java
         pom {
           name = 'jros2services'
-          description = 'Java module for interaction with ROS Action Server'
+          description = 'Java module for interaction with Services in ROS2'
           url = 'http://pinoweb.freetzi.com/jros2services'
 
           licenses {
