--- a/jros2services/build.gradle
+++ b/jros2services/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 
 plugins {
   id 'com.diffplug.spotless'
+  id 'java-library'
 }
 
 apply plugin : 'eclipse'
@@ -22,15 +23,9 @@ eclipse.classpath.file {
 }
 
 dependencies {
-  addDependencies(this, ["implementation", "apiElements"], "1.0", [
-    "io.github.pinorobotics:jrosservices"
-  ]);
-  addDependencies(this, ["implementation", "apiElements"], "2.0", [
-    "io.github.lambdaprime:jros2messages"
-  ]);
-  addDependencies(this, ["implementation", "apiElements"], "2.0", [
-    "io.github.lambdaprime:jros2client"
-  ]);
+  api "io.github.pinorobotics:jrosservices:1.0"
+  api "io.github.lambdaprime:jros2messages:2.0"
+  api "io.github.lambdaprime:jros2client:2.0"
 }
 
 jar { 
@@ -47,7 +42,15 @@ javadoc {
   options.noNavBar = true
   // ignore missing @return, @param etc
   options.addBooleanOption('Xdoclint:all,-missing', true)
-  exclude 'pinorobotics/ddsrpc/**'
+  // to support @inheritDoc we need to provide sources for inherited
+  // classes as part of '--module-source-path' option
+  // we use "Module-pattern form" for that. It replaces * with
+  // matched folder name which should also math module name itself
+  // https://docs.oracle.com/en/java/javase/18/docs/specs/man/javac.html#the-module-source-path-option
+  options.addStringOption('-module-source-path',
+   "${project.rootDir}/*/src/main/java:" +
+   "${project.rootDir}/../jrosservices/*/src/main/java")
+  exclude 'pinorobotics/jros2services/ddsrpc/**'
 }
 
 def packageDir = "$buildDir/package/${projectName}"
@@ -82,19 +85,19 @@ clean.dependsOn cleanRelease
 // run spotless and format code before the build
 classes.dependsOn spotlessApply
 
-if (project.hasProperty('publish')) {
+task updateVersion() {
+  // update version only when non SNAPSHOT version is built
+  if (version.contains("SNAPSHOT")) return;
+  println "Updating version to " + version
+  new id.xfunction.text.Substitutor()
+    .withRegexpSupport()
+    .substitute(java.nio.file.Paths.get("${project.rootDir}/README.md"), Map.of(
+       "io.github.pinorobotics:jros2services:[0-9.]+", "io.github.pinorobotics:jros2services:" + version
+    ));
+}
+createPackage.dependsOn updateVersion
 
-  // update version only during publishing
-  task updateVersion() {
-    if (version.contains("SNAPSHOT")) return;
-    println "Updating version to " + version
-    new id.xfunction.text.Substitutor()
-      .withRegexpSupport()
-      .substitute(java.nio.file.Paths.get("${project.rootDir}/README.md"), Map.of(
-         "io.github.pinorobotics:jros2services:[0-9.]+", "io.github.pinorobotics:jros2services:" + version
-      ));
-  }
-  createPackage.dependsOn updateVersion
+if (project.hasProperty('publish')) {
 
   // Initially it was taken from https://central.sonatype.org/publish/publish-gradle/
   // but since Gradle removed this plugin https://docs.gradle.org/7.0/userguide/upgrading_version_6.html#removal_of_the_legacy_maven_plugin
