--- a/jros2services.tests/build.gradle
+++ b/jros2services.tests/build.gradle
@@ -16,7 +16,7 @@ dependencies {
   testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
   testImplementation "org.junit.jupiter:junit-jupiter-params:${junitVersion}"
   testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
-  testRuntimeOnly 'org.junit.platform:junit-platform-commons:1.7.0'
+  testRuntimeOnly "org.junit.platform:junit-platform-commons:1.7.0"
 }
 
 sourceSets {
