--- a/jros2services.tests/build.gradle
+++ b/jros2services.tests/build.gradle
@@ -11,6 +11,7 @@ eclipse.classpath.file {
 
 dependencies {
   testImplementation project(':jros2services')
+  testImplementation "io.github.lambdaprime:id.opentelemetry-exporters-pack-junit:3.0-SNAPSHOT"
   
   def junitVersion = "5.8.1"
   testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
@@ -28,6 +29,7 @@ sourceSets {
 }
 
 test {
+  systemProperty "metrics.elastic.url", System.env.ELASTIC_URL + "/jros2client"
   useJUnitPlatform()
   testLogging {
     events "started", "failed"
