Android build support

--- a/jros2services/build.gradle
+++ b/jros2services/build.gradle
@@ -24,7 +24,7 @@ eclipse.classpath.file {
 }
 
 dependencies {
-  api "io.github.pinorobotics:jrosservices:2.0-SNAPSHOT"
+  api "io.github.pinorobotics:jrosservices:2.0"
   api "io.github.lambdaprime:jros2client:4.0"
 }
 
