--- a/jros2services.tests/build.gradle
+++ b/jros2services.tests/build.gradle
@@ -11,7 +11,7 @@ eclipse.classpath.file {
 
 dependencies {
   testImplementation project(':jros2services')
-  testImplementation "io.github.lambdaprime:id.opentelemetry-exporters-pack-junit:3.0-SNAPSHOT"
+  testImplementation "io.github.lambdaprime:id.opentelemetry-exporters-pack-junit:3.0"
   
   def junitVersion = "5.8.1"
   testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
