--- a/jros2services/build.gradle
+++ b/jros2services/build.gradle
@@ -14,6 +14,10 @@ plugins {
   id 'java-library'
 }
 
+boolean isReleaseBuild() {
+  return version != null && version.matches("\\d+[.\\d+]*");
+}
+
 apply plugin : 'eclipse'
 
 eclipse.classpath.file {
@@ -24,8 +28,8 @@ eclipse.classpath.file {
 }
 
 dependencies {
-  api "io.github.pinorobotics:jrosservices:2.0"
-  api "io.github.lambdaprime:jros2client:4.0"
+  api "io.github.pinorobotics:jrosservices:3.0-SNAPSHOT"
+  api "io.github.lambdaprime:jros2client:6.0"
 }
 
 configurations {
@@ -90,9 +94,8 @@ clean.dependsOn cleanRelease
 classes.dependsOn spotlessApply
 
 task updateVersion() {
-  // update version only when it is specified and non SNAPSHOT version is built
-  // 'unspecified' is the default value for the version in Gradle if it is not set
-  if (!version || version == "unspecified" || version.contains("SNAPSHOT")) return;
+  // update version only during release build
+  if (!isReleaseBuild()) return;
   println "Updating version to " + version
   new id.xfunction.text.Substitutor()
     .withRegexpSupport()
@@ -164,7 +167,7 @@ if (project.hasProperty('publish')) {
         }
         url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
       }
-    }    
+    }
   }
 
   if (project.hasProperty('signing.secretKeyRingFile')) {
