--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,9 +14,9 @@ java {
 }
 
 dependencies {
-  api "io.github.lambdaprime:id.xfunction:24.0:android@aar"
-  api "io.github.pinorobotics:jrosservices:2.0"
-  api "io.github.lambdaprime:jros2client:4.0"
+  api "io.github.lambdaprime:id.xfunction:25.0:android@aar"
+  api "io.github.pinorobotics:jrosservices:3.0"
+  api "io.github.lambdaprime:jros2client:6.0"
 }
 
 android {
@@ -42,4 +42,8 @@ task copySources(type: Copy) {
   into "src/main/java"
   exclude "**/module-info.java"
 }
+task cleanSource(type: Delete) {
+  delete "src/main/java"
+}
 preBuild.dependsOn copySources
+clean.dependsOn cleanSource
