--- a/jros2services/build.gradle
+++ b/jros2services/build.gradle
@@ -28,7 +28,7 @@ eclipse.classpath.file {
 }
 
 dependencies {
-  api "io.github.pinorobotics:jrosservices:3.0-SNAPSHOT"
+  api "io.github.pinorobotics:jrosservices:3.0"
   api "io.github.lambdaprime:jros2client:6.0"
 }
 
@@ -50,6 +50,13 @@ javadoc {
   options.noNavBar = true
   // ignore missing @return, @param etc
   options.addBooleanOption('Xdoclint:all,-missing', true)
+  // should point to location of element-list files
+  options.addMultilineStringsOption("link").value = [
+    "http://portal2.atwebpages.com/jrosclient/javadoc/jrosclient/",
+    "http://portal2.atwebpages.com/jrosclient/javadoc/jrosmessages/",
+    "http://portal2.atwebpages.com/jrosclient/javadoc/jros2client/",
+    "http://pinoweb.freetzi.com/jrosservices/javadoc/jrosservices/",
+  ]
   // to support @inheritDoc we need to provide sources for inherited
   // classes as part of '--module-source-path' option
   // we use "Module-pattern form" for that. It replaces * with
