--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,16 @@
 version = 5.0-SNAPSHOT
-projectName = jros2services
+zzName = jros2services
+zzNamespace = pinorobotics
+zzCopyright = jrosservices
+zzJavaVersion = 17
+zzDescription = Java module for interaction with Services in ROS2 (Robot Operating System)
+zzUrl = http://pinoweb.freetzi.com/jrosservices
+zzRepoUrl = https://github.com/pinorobotics/jros2services
+zzDevName = lambdaprime
+zzDevEmail = intid@protonmail.com
+zzApiDependencies = io.github.pinorobotics:jrosservices:3.0,io.github.lambdaprime:jros2client:6.0
+zzTestDependencies = io.github.lambdaprime:id.opentelemetry-exporters-pack-junit:3.0
+zzMinTestCoverage = 0.3
+zzJavadocLinks = http://portal2.atwebpages.com/jrosclient/javadoc/jrosclient/,http://portal2.atwebpages.com/jrosclient/javadoc/jrosmessages/,http://portal2.atwebpages.com/jrosclient/javadoc/jros2client/,http://pinoweb.freetzi.com/jrosservices/javadoc/jrosservices/
+zzJavadocInheritFrom = 
+zzRequiredGradleVersion = 8.3
