--- a/jros2services/build.gradle
+++ b/jros2services/build.gradle
@@ -28,17 +28,20 @@ eclipse.classpath.file {
 }
 
 dependencies {
-  api "io.github.pinorobotics:jrosservices:3.0"
-  api "io.github.lambdaprime:jros2client:6.0"
-}
-
-configurations {
-  customConfig.extendsFrom implementation
+  zzApiDependencies.split(',').each { api it }
 }
 
 jar {
   manifest { 
-    attributes 'Implementation-Version': "${rootProject.version}"
+    attributes 'Implementation-Version': "${version}"
+  }
+}
+
+sourceSets {
+  main {
+    java {
+      srcDirs += ["src/main/gen/java"]
+    }
   }
 }
 
@@ -50,25 +53,46 @@ javadoc {
   options.noNavBar = true
   // ignore missing @return, @param etc
   options.addBooleanOption('Xdoclint:all,-missing', true)
-  // should point to location of element-list files
-  options.addMultilineStringsOption("link").value = [
-    "http://portal2.atwebpages.com/jrosclient/javadoc/jrosclient/",
-    "http://portal2.atwebpages.com/jrosclient/javadoc/jrosmessages/",
-    "http://portal2.atwebpages.com/jrosclient/javadoc/jros2client/",
-    "http://pinoweb.freetzi.com/jrosservices/javadoc/jrosservices/",
-  ]
+  options.addStringOption('-show-packages', 'exported')
+  if (!zzJavadocLinks.isBlank()) {
+    // should point to location of element-list files
+    options.addMultilineStringsOption("link").value = Arrays.asList(zzJavadocLinks.split(','))
+  }
+  // Gradle does not support exclude correctly:
+  // https://github.com/gradle/gradle/issues/19726
+  def sourceSetDirectories = sourceSets
+    .main
+    .java
+    .sourceDirectories
+    .getFiles()
+    .stream()
+    .map({f -> f.toString() })
+    .collect(java.util.stream.Collectors.joining(":"))
+  def moduleSourcePath = []
+  moduleSourcePath += "${zzName}=" + sourceSetDirectories
   // to support @inheritDoc we need to provide sources for inherited
   // classes as part of '--module-source-path' option
-  // we use "Module-pattern form" for that. It replaces * with
-  // matched folder name which should also math module name itself
+  // we use "Module-specific form" for that.
   // https://docs.oracle.com/en/java/javase/18/docs/specs/man/javac.html#the-module-source-path-option
-  options.addStringOption('-module-source-path',
-   "${project.rootDir}/*/src/main/java:" +
-   "${project.rootDir}/../jrosservices/*/src/main/java")
-  exclude 'pinorobotics/jros2services/ddsrpc/**'
+  zzJavadocInheritFrom.split(',').findAll{ !it.isBlank() }.each {
+    moduleSourcePath += "${it}=${project.rootDir}/../${it}/${it}/src/main/java:${project.rootDir}/../${it}/${it}/src/main/gen/java"
+  }
+  options.addMultilineStringsOption("-module-source-path").value = moduleSourcePath.stream().map(Object::toString).toList()
+  exclude "${zzNamespace}/${zzName}/impl/**"
+  // Gradle javadoc considers all from java sourceSet only
+  // This means that doc-files/* are excluded which is not
+  // very compliant to javadoc https://docs.oracle.com/en/java/javase/13/javadoc/source-files.html
+  // to fix that we copy doc-files/* manually
+  doLast {
+    copy {
+      from "${zzName}/src/main/java"
+      into "$project.docsDir/javadoc/${zzName}"
+      include "**/doc-files/*"
+    }
+  }
 }
 
-def packageDir = "$buildDir/package/${projectName}"
+def packageDir = "$buildDir/package/${zzName}"
 
 task createRelease(type: Zip) {
   archiveFileName = "$releaseFileName"
@@ -82,7 +106,14 @@ task copyLibs(type: Copy) {
   into "${packageDir}/libs"
 }
 
-task createPackage(type: Copy, dependsOn: [copyLibs]) {
+task copyExamples(type: Copy) {
+  from("${project.rootDir}/${zzName}.examples/generic/src") {
+    include "**"
+  }
+  into "${packageDir}/examples"
+}
+
+task createPackage(type: Copy, dependsOn: [copyLibs, copyExamples]) {
   from "${project.rootDir}/README.md"
   from "${project.rootDir}/LICENSE-2.0.txt"
   into packageDir
@@ -107,10 +138,11 @@ task updateVersion() {
   new id.xfunction.text.Substitutor()
     .withRegexpSupport()
     .substitute(java.nio.file.Paths.get("${project.rootDir}/README.md"), Map.of(
-       "io.github.pinorobotics:jros2services:[0-9.]+", "io.github.pinorobotics:jros2services:" + version
+      "io.github.${zzNamespace}:${zzName}:[0-9.]+".toString(),
+      "io.github.${zzNamespace}:${zzName}:${version}".toString()
     ));
 }
-createPackage.dependsOn updateVersion
+createRelease.dependsOn updateVersion
 
 if (project.hasProperty('publish')) {
 
@@ -138,13 +170,13 @@ if (project.hasProperty('publish')) {
   publishing {
     publications {
       mavenJava(MavenPublication) {
-        artifactId = 'jros2services'
-        groupId = 'io.github.pinorobotics'
+        artifactId = zzName
+        groupId = "io.github.${zzNamespace}"
         from components.java
         pom {
-          name = 'jros2services'
-          description = 'Java module for interaction with Services in ROS2'
-          url = 'http://pinoweb.freetzi.com/jros2services'
+          name = zzName
+          description = zzDescription
+          url = zzUrl
 
           licenses {
             license {
@@ -155,13 +187,13 @@ if (project.hasProperty('publish')) {
 
           developers {
             developer {
-              id = 'lambdaprime'
-              email = 'intid@protonmail.com'
+              id = zzDevName
+              email = zzDevEmail
             }
           }
 
           scm {
-            url = 'https://github.com/pinorobotics/jros2services'
+            url = zzRepoUrl
           }
         }
       }
