--- a/jros2services/build.gradle
+++ b/jros2services/build.gradle
@@ -66,6 +66,7 @@ javadoc {
     .sourceDirectories
     .getFiles()
     .stream()
+    .filter({f -> f.exists()})
     .map({f -> f.toString() })
     .collect(java.util.stream.Collectors.joining(":"))
   def moduleSourcePath = []
@@ -75,7 +76,10 @@ javadoc {
   // we use "Module-specific form" for that.
   // https://docs.oracle.com/en/java/javase/18/docs/specs/man/javac.html#the-module-source-path-option
   zzJavadocInheritFrom.split(',').findAll{ !it.isBlank() }.each {
-    moduleSourcePath += "${it}=${project.rootDir}/../${it}/${it}/src/main/java:${project.rootDir}/../${it}/${it}/src/main/gen/java"
+    def path = "${it}=${project.rootDir}/../${it}/${it}/src/main/java"
+    def srcGen = "${project.rootDir}/../${it}/${it}/src/main/gen/java"
+    if (file(srcGen).exists()) path += ":" + srcGen
+    moduleSourcePath += path
   }
   options.addMultilineStringsOption("-module-source-path").value = moduleSourcePath.stream().map(Object::toString).toList()
   exclude "${zzNamespace}/${zzName}/impl/**"
@@ -114,8 +118,11 @@ task copyExamples(type: Copy) {
 }
 
 task createPackage(type: Copy, dependsOn: [copyLibs, copyExamples]) {
-  from "${project.rootDir}/README.md"
-  from "${project.rootDir}/LICENSE-2.0.txt"
+  zzFilesToPackage.split(',').findAll{ !it.isBlank() }.each {
+    def filePath = "${project.rootDir}/" + it
+    assert file(filePath).exists()
+    from filePath
+  }
   into packageDir
 }
 
