Issue pinorobotics/jros2services#1 Fixing processing of empty messages, adding tests

--- a/jros2services.tests/src/test/resources/jros2services-test.properties
+++ b/jros2services.tests/src/test/resources/jros2services-test.properties
@@ -14,3 +14,6 @@ java.util.logging.FileHandler.filter = id.xfunction.logging.LoggerNameFilter
 
 id.xfunction.logging.filter = pinorobotics.jros2services, id.jros2client
 id.xfunction.logging.excludedLoggers = pinorobotics.rtpstalk.impl.spec.transport.io.RtpsInputKineticStream
+
+# enable logging for byte stream of any received messages (requires FINER level)
+#id.xfunction.logging.filter = id.jrosmessages.impl.AbstractMessageSerializationUtils
