--- a/jros2services.tests/ws2/src/minimal_service/package.xml
+++ b/jros2services.tests/ws2/src/minimal_service/package.xml
@@ -13,9 +13,11 @@
 
   <build_depend>rclcpp</build_depend>
   <build_depend>example_interfaces</build_depend>
+  <build_depend>std_srvs</build_depend>
 
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>example_interfaces</exec_depend>
+  <exec_depend>std_srvs</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
