--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version = 7.0-SNAPSHOT
+version = 8.0-SNAPSHOT
 zzName = jros2services
 zzNamespace = pinorobotics
 zzCopyright = jrosservices
@@ -8,10 +8,10 @@ zzUrl = http://pinoweb.freetzi.com/jrosservices
 zzRepoUrl = https://github.com/pinorobotics/jros2services
 zzDevName = lambdaprime
 zzDevEmail = intid@protonmail.com
-zzApiDependencies = io.github.pinorobotics:jrosservices:4.0-SNAPSHOT,io.github.lambdaprime:jros2client:9.0,io.github.lambdaprime:jros2messages:9.0
-zzTestDependencies = io.github.lambdaprime:id.opentelemetry-exporters-pack-junit:3.0
+zzApiDependencies = io.github.pinorobotics:jrosservices:4.0,io.github.lambdaprime:jros2client:11.0
+zzTestDependencies = io.github.lambdaprime:id.opentelemetry-exporters-pack-junit:4.0
 zzMinTestCoverage = 0.3
 zzJavadocLinks = http://portal2.atwebpages.com/jrosclient/javadoc/jrosclient/,http://portal2.atwebpages.com/jrosclient/javadoc/jrosmessages/,http://portal2.atwebpages.com/jrosclient/javadoc/jros2client/,http://pinoweb.freetzi.com/jrosservices/javadoc/jrosservices/
 zzJavadocInheritFrom = 
-zzRequiredGradleVersion = 8.3
+zzRequiredGradleVersion = 8.10.1
 zzFilesToPackage = README.md,LICENSE-2.0.txt
