Including copyright into the license file

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 version = 8.0-SNAPSHOT
 zzName = jros2services
 zzNamespace = pinorobotics
-zzCopyright = jrosservices
+zzCopyright = jrosservices project
 zzJavaVersion = 17
 zzDescription = Java module for interaction with Services in ROS2 (Robot Operating System)
 zzUrl = http://pinoweb.freetzi.com/jrosservices
