--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,5 @@
 zzName = jros2services
 zzNamespace = pinorobotics
-zzApiDependencies = io.github.pinorobotics:jrosservices:4.0,io.github.lambdaprime:jros2client:11.0
+zzApiDependencies = io.github.lambdaprime:jroscommon:1.0,io.github.pinorobotics:jrosservices:5.0,io.github.lambdaprime:jros2client:12.0
 zzJavaVersion = 17
 zzAndroidSdkVersion = 34
