--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version = 8.0-SNAPSHOT
+version = 9.0-SNAPSHOT
 zzName = jros2services
 zzNamespace = pinorobotics
 zzCopyright = jrosservices project
@@ -8,7 +8,7 @@ zzUrl = http://pinoweb.freetzi.com/jrosservices
 zzRepoUrl = https://github.com/pinorobotics/jros2services
 zzDevName = lambdaprime
 zzDevEmail = intid@protonmail.com
-zzApiDependencies = io.github.lambdaprime:jroscommon:1.0-SNAPSHOT,io.github.pinorobotics:jrosservices:5.0-SNAPSHOT,io.github.lambdaprime:jros2client:12.0-SNAPSHOT
+zzApiDependencies = io.github.lambdaprime:jroscommon:1.0,io.github.pinorobotics:jrosservices:5.0,io.github.lambdaprime:jros2client:12.0
 zzTestDependencies = io.github.lambdaprime:id.opentelemetry-exporters-pack-junit:4.0
 zzMinTestCoverage = 0.3
 zzJavadocLinks = http://portal2.atwebpages.com/jrosclient/javadoc/jrosclient/,http://portal2.atwebpages.com/jrosclient/javadoc/jroscommon/,http://portal2.atwebpages.com/jrosclient/javadoc/jrosmessages/,http://portal2.atwebpages.com/jrosclient/javadoc/jros2client/,http://pinoweb.freetzi.com/jrosservices/javadoc/jrosservices/
