--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ zzUrl = http://pinoweb.freetzi.com/jrosservices
 zzRepoUrl = https://github.com/pinorobotics/jros2services
 zzDevName = lambdaprime
 zzDevEmail = intid@protonmail.com
-zzApiDependencies = io.github.lambdaprime:jroscommon:1.0,io.github.pinorobotics:jrosservices:5.0,io.github.lambdaprime:jros2client:12.0
+zzApiDependencies = io.github.lambdaprime:jroscommon:1.0,io.github.pinorobotics:jrosservices:5.0,io.github.lambdaprime:jros2client:13.0-SNAPSHOT
 zzTestDependencies = io.github.lambdaprime:id.opentelemetry-exporters-pack-junit:4.0
 zzMinTestCoverage = 0.3
 zzJavadocLinks = http://portal2.atwebpages.com/jrosclient/javadoc/jrosclient/,http://portal2.atwebpages.com/jrosclient/javadoc/jroscommon/,http://portal2.atwebpages.com/jrosclient/javadoc/jrosmessages/,http://portal2.atwebpages.com/jrosclient/javadoc/jros2client/,http://pinoweb.freetzi.com/jrosservices/javadoc/jrosservices/
